# backend/src/items/dto/item.dto.ts
@@ -1,5 +1,11 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsString, IsNumber, IsOptional, Min, IsBoolean } from 'class-validator';
+import {
+  IsString,
+  IsNumber,
+  IsOptional,
+  Min,
+  IsBoolean,
+} from 'class-validator';
 
 export class CreateItemDto {
   @ApiProperty({ example: 'Laptop Dell XPS 13', description: 'Item name' })
@@ -29,16 +35,27 @@ export class CreateItemDto {
   @IsString()
   itemLink?: string;
 
-    // price property
+  // price property
   @ApiProperty({
     example: 999.99,
-    description: 'Price of the item',
+    description: 'Purchase price of the item',
     required: false,
   })
   @IsOptional()
   @IsNumber()
   @Min(0)
   price?: number;
+
+  // sellprice property
+  @ApiProperty({
+    example: 899.99,
+    description: 'Selling price of the item',
+    required: false,
+  })
+  @IsOptional()
+  @IsNumber()
+  @Min(0)
+  sellprice?: number;
 
   // boolean property to check if the item is a consumable
   @ApiProperty({
@@ -93,7 +110,6 @@ export class UpdateItemDto {
   @IsString()
   status?: string;
 
-  
   @ApiProperty({
     example: 'https://example.com/item-link',
     description: 'Link to the item',
@@ -103,16 +119,27 @@ export class UpdateItemDto {
   @IsString()
   itemLink?: string;
 
-    // price property
+  // price property
   @ApiProperty({
     example: 999.99,
-    description: 'Price of the item',
+    description: 'Purchase price of the item',
     required: false,
   })
   @IsOptional()
   @IsNumber()
   @Min(0)
   price?: number;
+
+  // sellprice property
+  @ApiProperty({
+    example: 899.99,
+    description: 'Selling price of the item',
+    required: false,
+  })
+  @IsOptional()
+  @IsNumber()
+  @Min(0)
+  sellprice?: number;
 
   @ApiProperty({ example: 1, description: 'Room ID', required: false })
   @IsOptional()
