# backend/swagger.json
@@ -544,6 +544,50 @@
         ]
       }
     },
+    "/items/inventory-value": {
+      "get": {
+        "operationId": "ItemsController_getInventoryValue",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Inventory value calculated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "totalValue": {
+                      "type": "number",
+                      "description": "Total inventory value"
+                    },
+                    "itemsWithValue": {
+                      "type": "number",
+                      "description": "Number of items with sellprice"
+                    },
+                    "totalItems": {
+                      "type": "number",
+                      "description": "Total number of items"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "Get total inventory value based on selling prices",
+        "tags": [
+          "Items"
+        ]
+      }
+    },
     "/items/search": {
       "get": {
         "operationId": "ItemsController_search",
@@ -2928,7 +2972,12 @@
           "price": {
             "type": "number",
             "example": 999.99,
-            "description": "Price of the item"
+            "description": "Purchase price of the item"
+          },
+          "sellprice": {
+            "type": "number",
+            "example": 899.99,
+            "description": "Selling price of the item"
           },
           "consumable": {
             "type": "boolean",
@@ -3069,7 +3118,12 @@
           "price": {
             "type": "number",
             "example": 999.99,
-            "description": "Price of the item"
+            "description": "Purchase price of the item"
+          },
+          "sellprice": {
+            "type": "number",
+            "example": 899.99,
+            "description": "Selling price of the item"
           },
           "roomId": {
             "type": "number",
